LPD-49265 Clean up, remove Java security manager related parameter and policy file as they are not longer needed.